Node-o-matiC translation in zh-tw minor fix

--- a/app/src/main/res/values-zh-rTW/help.xml
+++ b/app/src/main/res/values-zh-rTW/help.xml
@@ -191,9 +191,9 @@
     <string name="help_node"><![CDATA[
         <h1>節點</h1>
         <h2>懶人版教學</h2>
-        <p>下拉節點列表即可重新整理節點狀態，你可以手動添加三至五個節點，Monerujo 將會自動為你挑選最佳的節點！</p>
+        <p>下拉節點列表即可重新整理節點狀態，你可以手動新增三至五個節點，Monerujo 將會自動為你挑選最佳的節點！</p>
         <h2>什麼是節點？</h2>
-        <p>Monerujo 必須透過遠端節點 (有時稱則為 Daemon ) 連接至 Monero 交易網路，透過這種方式就不需要下載和儲存整個區塊鏈的副本。<p>
+        <p>Monerujo 必須透過遠端節點 (有時則稱為 Daemon ) 連接至 Monero 交易網路，透過這種方式就不需要下載和儲存整個區塊鏈的副本。<p>
         <h2>節點列表</h2>
         <p>如果列表是空白的，你可以自行手動新增節點或是讓 Monerujo 為你掃描網路上的可用節點，以下是詳細教學。</p>
         <p>節點列表中顯示了目前已知的節點，另外，在名稱下方的的時間戳記表示為其最後更新區塊的時間。
@@ -204,7 +204,7 @@
         <h2>增加新的節點</h2>
         <p>點選下方的「新增節點」，你將會被要求輸入節點的資訊。
         在「位置」這欄請輸入節點的網址或是 IP 位址，這是唯一的必填資訊。
-        如果該節點是運作在非預設的連接埠 (譬如是 18089)，請輸入於「連接埠」的欄位中。
+        如果該節點是運作在非預設的通訊埠 (譬如是 18089)，請輸入於「通訊埠」的欄位中。
         你也可以命名該節點以方便在後續使用時更容易辨識。
         若有些節點要求登入資訊，請輸入於「登入名稱」與「密碼」的欄位中。
         現在你可以按下「測試節點」以檢查節點設定。
