--- a/app/src/main/res/values-es/help.xml
+++ b/app/src/main/res/values-es/help.xml
@@ -78,7 +78,7 @@
         Asegúrate de escribir esta contraseña. Si restablececes tu dispositivo o desinstalas esta
         aplicación, vas a necesitarla para acceder a tu monedero otra vez.<br/>
         <h3>CrAzYpass</h3>
-        Si la contraseña que se muestra consiste de 52 caracteres alfanuméricos en grupos de 4...
+        Si la contraseña que se muestra consiste de 52 caracteres alfanuméricos en grupos de 4&#8230;
         ¡felicitaciones!
 		Los archivos de tu monedero están asegurado con una clave de 256 bits, generada por tu
         propio dispositivo basándose en la contraseña que elegiste (al crear el monedero o luego
@@ -160,6 +160,14 @@
         <p>Esta es la dirección pública del monedero al que vas a enviar moneroj. Puedes copiarla
         desde tu portapapeles, escanear un código QR o introducirla manualmente. Asegúrate de
         comprobarla varias veces para confirmar que no estás enviando moneroj a la dirección equivocada.</p>
+        <p>In addition to using an XMR address, you can also use
+        <ul>
+            <li>an OpenAlias for XMR or BTC</li>
+            <li>a BTC address</li>
+            <li>a bitcoin: URI (including BIP70 like bitpay)</li>
+        </u>
+        Please note, that sending BTC is processed through the XMR.TO service (see https://xmr.to
+        for details). See the section on sending BTC below.</p>
         <h2>ID de Pago</h2>
         Al ser Monero ofuscado por naturaleza, puedes usar un ID de Pago para identificar un envío de Monero entre
         dos partes. Esto es completamente opcional y privado. Por ejemplo, esto permitiría que un
@@ -304,4 +312,6 @@
         Monerujo irá directo a los nodos semilla de Monero codificados en Monero. El
         escaneo parará cuando encuentre 10 nodos remotos en total.</p>
     ]]></string>
+
+    <!-- Note for translators: new/changed text also in help_send -->
 </resources>
