--- a/app/src/main/res/values-it/help.xml
+++ b/app/src/main/res/values-it/help.xml
@@ -148,8 +148,14 @@
 	<p>Questo è l&apos;indirizzo pubblico del portafoglio cui stai inviando Moneroj, puoi incollare qui un indirizzo
 		che hai precededentemente copiato sul blocco appunti, scansionare un codice QR o inserire un indirizzo
 		manualmente. Accertati più volte che sia l&apos;indirizzo corretto e che tu non stia inviando Moneroj ad un indirizzo sbagliato.</p>
-        <p>Oltre ad inviare Moneroj (XMR), puoi anche inviare Bitcoin (BTC) attraverso il servizio XMR.TO (vedi https://xmr.to
-        per ulteriori dettagli). Controlla la sezione sull&apos;invio di BTC più avanti.</p>
+        <p>In addition to using an XMR address, you can also use
+        <ul>
+            <li>an OpenAlias for XMR or BTC</li>
+            <li>a BTC address</li>
+            <li>a bitcoin: URI (including BIP70 like bitpay)</li>
+        </u>
+        Please note, that sending BTC is processed through the XMR.TO service (see https://xmr.to
+        for details). See the section on sending BTC below.</p>
         <h2>ID Pagamento</h2>
 	<p>Puoi usare un ID Pagamento per identificare la causale della transazione. Questa è un&apos;informazione
 		opzionale e privata. Ad esempio può aiutare un venditore ad associare una transazione ricevuta ad un bene da te acquistato.<p>
@@ -285,4 +291,6 @@
         Monerujo proseguirà con i nodi seed codificati in Monero. La scansione
         termina quando vengono trovati 10 nodi in totale.</p>
     ]]></string>
+
+    <!-- Note for translators: new/changed text also in help_send -->
 </resources>
