--- a/app/src/main/res/values-ja/help.xml
+++ b/app/src/main/res/values-ja/help.xml
@@ -239,9 +239,14 @@
         コピーするか、QRコードから読み取るか、直接入力することができます。
         間違ったアドレスにコインが送金されないように、
         このアドレスは確実に間違いがないことを確認してください。</p>
-        <p>XMRの送金に加えて、あなたはBTCを XMR.TO のサービスを使って
-        送金することができます（詳細は https://xmr.to をご覧ください）。
-        下記のBTCの送金のセクションをご覧ください。</p>
+        <p>In addition to using an XMR address, you can also use
+        <ul>
+            <li>an OpenAlias for XMR or BTC</li>
+            <li>a BTC address</li>
+            <li>a bitcoin: URI (including BIP70 like bitpay)</li>
+        </u>
+        Please note, that sending BTC is processed through the XMR.TO service (see https://xmr.to
+        for details). See the section on sending BTC below.</p>
         <h2>ペイメントID(Payment ID)</h2>
         <p>あなたは2者間でモネロを送金した理由を特定するために
         ペイメントIDを使うことができます。
@@ -422,4 +427,6 @@
         シードノードと直接通信します。
         スキャンは全部で10個のリモートノードを見つけたときに終了します。</p>
     ]]></string>
+
+    <!-- Note for translators: new/changed text also in help_send -->
 </resources>
