--- a/app/src/main/res/values-pt-rBR/help.xml
+++ b/app/src/main/res/values-pt-rBR/help.xml
@@ -154,8 +154,14 @@
         <p>Este é o endereço público da carteira na qual você está enviando Monero. Você pode colar da sua área de transferência,
         escanear um código QR ou escrevê-lo manualmente. Verifique-o múltiplas vezes para garantir que você não está enviando
         Monero para o endereço errado.</p>
-        <p>Além de enviar XMR, você também pode enviar BTC através do serviço XMR.TO (consulte https://xmr.to para mais detalhes).
-        Consulte a seção de envio de BTC mais abaixo.</p>
+        <p>In addition to using an XMR address, you can also use
+        <ul>
+            <li>an OpenAlias for XMR or BTC</li>
+            <li>a BTC address</li>
+            <li>a bitcoin: URI (including BIP70 like bitpay)</li>
+        </u>
+        Please note, that sending BTC is processed through the XMR.TO service (see https://xmr.to
+        for details). See the section on sending BTC below.</p>
         <h2>ID do Pagamento</h2>
         <p>Você pode usar o ID do Pagamento para identificar a razão pela qual você transacionou com a contraparte.
         Essa opção é opcional e privada. Por exemplo, lojistas podem reconciliar o seu pagamento com
@@ -281,4 +287,6 @@
         o Monerujo irá direto para os nós codificados direto no Monero em si. O
         escaneamento termina quando 10 nós remotos são encontrados no total.</p>
     ]]></string>
+
+    <!-- Note for translators: new/changed text also in help_send -->
 </resources>
