--- a/app/src/main/res/values-sv/help.xml
+++ b/app/src/main/res/values-sv/help.xml
@@ -131,8 +131,14 @@
         <p>Det här är offentliga adressen av plånboken du skickar Moneroj till, du kan kopiera den från
         urklipp, skanna en QR-kod eller ange den manuellt. Se till att du trippel-kollar den för att
         vara säker på att du inte skickar pengar till fel adress.</p>
-        <p>Dessutom kan du skicka BTC genom XMR.TO tjänsten (se https://xmr.to för detaljer). Se delen
-        om att skicka BTC nedan.</p>
+        <p>In addition to using an XMR address, you can also use
+        <ul>
+            <li>an OpenAlias for XMR or BTC</li>
+            <li>a BTC address</li>
+            <li>a bitcoin: URI (including BIP70 like bitpay)</li>
+        </u>
+        Please note, that sending BTC is processed through the XMR.TO service (see https://xmr.to
+        for details). See the section on sending BTC below.</p>
         <h2>Betalnings-ID</h2>
         <p>Du kan använda ett Betalnings-ID för att identifiera anledningen du skickat Monero till någon,
         det är valfritt och privat. Till exempel tillåter det en affär att förknippa din transaktion
@@ -269,4 +275,6 @@
         Monerujo will go straight to the Monero seed nodes hardcoded into Monero. The
         scan stops when it finds 10 remote nodes in total.</p>
     ]]></string>
+
+    <!-- Note for translators: new/changed text also in help_send -->
 </resources>
