Fixed unescaped apostrophe

--- a/app/src/main/res/values-et/about.xml
+++ b/app/src/main/res/values-et/about.xml
@@ -28,7 +28,7 @@
         tehingute töötlemiseks ja edastatakse Monero võrku krüptitud kujul.
         </p>
         <p>Rakendus ei kogu muid isikuandmeid.</p>
-        <p>Kui kasutate vahetusfunktsiooni, kasutab monerujo selleks coinmarketcap.com'i
+        <p>Kui kasutate vahetusfunktsiooni, kasutab monerujo selleks coinmarketcap.com\'i
         avaliku API funktsiooni. Vaadake nende privaatsuspoliitikat aadressil
         https://coinmarketcap.com/privacy, et saada üksikasju, kuidas teie päringute kohta
         andmeid kogutakse.</p>
