--- a/app/src/main/res/values-et/about.xml
+++ b/app/src/main/res/values-et/about.xml
@@ -8,54 +8,54 @@
         <b>Autorid</b>
         <br/>
         m2049r, baltsar777, anhdres, keejef,
-        rehrar, EarlOfEgo, ErCiccione et al.
+        rehrar, EarlOfEgo, ErCiccione jt
         <br/><br/>
         <a href="https://monerujo.io/">monerujo.io</a>
         ]]></string>
 
     <string name="privacy_policy"><![CDATA[
-        <h1>Privacy Policy</h1>
-        <p>This page informs you of our policies regarding the collection,
-        use and disclosure of personal information we receive from users of our
-        app (monerujo: Monero Wallet).
+        <h1>Privaatsuspoliitika</h1>
+        <p>See leht informeerib sind personaalsete andmete kogumise, kasutamise ja
+        avaldamise osas, mida saame meie äpi (monerujo: Monero Wallet) kasutajatelt.
         </p>
-        <p>By using the app, you agree to the collection and use of information in
-        accordance with this policy.
+        <p>Äppi kasutades nõustute teabe kogumise ja kasutamisega vastavalt sellele
+        poliitikale.
         </p>
-        <h2>Data Collected</h2>
-        <p>Personal data is any kind of data that could identify an individual.
+        <h2>Kogutud andmed</h2>
+        <p>Isikuandmed on igasugused andmed, mis võivad isikut tuvastada.
         </p>
-        <p>Monero keys and public addresses are collected and processed by the app locally
-        for the purpose of processing transactions and transmitted into the Monero Network
-        in encrypted form.
+        <p>Monero võtmeid ja avalikke aadresse kogutakse ja töödeldakse äpisiseselt
+        tehingute töötlemiseks ja edastatakse Monero võrku krüptitud kujul.
         </p>
-        <p>Other personal data is not collected by the app.</p>
-        <p>If you use the exchange (optional) functionality, monerujo fetches the exchange
-        rate through the public API of coinmarketcap.com.
-        See their privacy policy at https://coinmarketcap.com/privacy for
-        details on how data in your requests is collected.</p>
-        <p>If you use the app to pay to BTC addresses, you will be using the XMR.TO service.
-        See their privacy policy at https://xmr.to/ for details. Monerujo send them the BTC
-        destination address and amount. Your IP will also be collectable.</p>
-        <h2>App Permissions</h2>
+        <p>Rakendus ei kogu muid isikuandmeid.</p>
+        <p>Kui kasutate vahetusfunktsiooni, kasutab monerujo selleks coinmarketcap.com\'i
+        avaliku API funktsiooni. Vaadake nende privaatsuspoliitikat aadressil
+        https://coinmarketcap.com/privacy, et saada üksikasju, kuidas teie päringute kohta
+        andmeid kogutakse.</p>
+        <p>Kui kasutate äppi BTC-aadressitele raha saatmiseks, siis kasutatakse selleks
+        XMR.TO teenust. Lisateabe saamiseks vaadake nende privaatsuspoliitikat aadressil
+        https://xmr.to/. Monerujo saadab neile BTC sihtkoha aadressi ja summa. Koguda
+        võidakse ka teie IP aadressi.</p>
+        <h2>Äpi õigused</h2>
         <ul>
-        <li>INTERNET : Connect to the Monero Network via a Monero Daemon Node</li>
-        <li>READ_EXTERNAL_STORAGE : Read wallet files stored on the device</li>
-        <li>WRITE_EXTERNAL_STORAGE : Write wallet files stored on the device</li>
-        <li>WAKE_LOCK : Keep device awake while syncing</li>
-        <li>CAMERA : Scan QR Codes for receiving Monero</li>
+        <li>INTERNET : Monero võrguga ühenduse loomine Monero Daemoni sõlmpunkti kaudu</li>
+        <li>READ_EXTERNAL_STORAGE : Seadmesse salvestatud rahakoti failide lugemiseks</li>
+        <li>WRITE_EXTERNAL_STORAGE : Rahakoti failide seadmesse salvestamiseks</li>
+        <li>WAKE_LOCK : Sünkroonimise ajal hoiab seadme ärkvel</li>
+        <li>CAMERA : QR-koodi lugemine Monero saamiseks</li>
         </ul>
-        <h2>Changes to this Privacy Policy</h2>
-        <p>We may update this privacy policy from time to time. We will notify
-        you of any changes by posting the new privacy policy in the app and on the
-        website (www.monerujo.io)
-        You are advised to review this privacy policy periodically for any changes.
-        <p>This Privacy Policy was last updated: 10th November, 2017.
+        <h2>Privaatsuspoliitika muudatused</h2>
+        <p>Me võime aeg-ajalt seda privaatsuspoliitikat uuendada. Teatame teile kõigist
+        muudatustest, avaldades uued privaatsuseeskirjad äpis ja veebis (www.monerujo.io)
+        Soovitame teil seda privaatsuspoliitikat perioodiliselt üle vaadata juhuks,
+        kui vahepeal on toimunud muutusi.
         </p>
-        <h2>Contact Us</h2>
-        <p>If you have any questions about our privacy policy,
-        or how your data is being collected and processed,
-        please e-mail privacy@monerujo.io.
+        <p>Seda privaatsuspoliitikat uuendati viimati: 10. november, 2017.
+        </p>
+        <h2>Võta meiega ühendust</h2>
+        <p>Kui teil on mingeid küsimusi meie privaatsuseeskirjade kohta või kuidas teie
+        andmeid kogutakse ja töödeldakse, siis palume saata e-post aadressile
+        privacy@monerujo.io.
         </p>
         ]]></string>
 </resources>
