--- a/app/src/main/res/values-pt-rBR/help.xml
+++ b/app/src/main/res/values-pt-rBR/help.xml
@@ -213,11 +213,11 @@
 
     <string name="help_wallet"><![CDATA[
         <h1>Carteira</h1>
-        <h2>Street Mode</h2>
-        <p>Street mode can be enabled/disabled in the menu or Gunther\'s head icon. In this mode, your
-        balance is not shown on any screen so you can safely use your wallet on the street, a pub or
-        other public place. Previous transactions are also hidden. New transactions will be shown, so
-        you can see that you have sent/received sweet Moneroj!</p>
+        <h2>Modo Rua</h2>
+        <p>O modo rua pode ser ativado/desativado no menu ou no ícone da cabeça do Gunther. Neste modo, o seu
+        saldo não será exibido em nenhuma tela para que você possa usar sua carteira com segurança na rua, em um bar ou
+        outro lugar público. Transações anteriores também serão ocultas. Novas transações serão mostradas, então
+        você pode ver que você enviou/recebeu Moneroj!</p>
         <h2>Escaneando</h2>
         Como o Monero sempre mantém tudo privado, sempre que você abrir sua carteira o Monerujo precisa escanear
         o blockchain para identificar se você recebeu algum novo Monero. Somente as informações que correspondem à sua
@@ -234,51 +234,51 @@
     ]]></string>
 
     <string name="help_node"><![CDATA[
-        <h1>Nodes</h1>
+        <h1>Nós</h1>
         <h2>TL;DR</h2>
-        <p>Refresh the nodes list by pulling down &amp; bookmark 3&#8211;5 nodes to allow Monerujo
-        to choose the best one for you!</p>
-        <h2>What&apos;s a Node?</h2>
-        <p>Monerujo uses a Remote Node (sometimes also called Daemon) to communicate with
-        the Monero Network without having to download and store a copy of the
-        whole blockchain itself.<p>
-        <h2>Node List</h2>
-        <p>If the list is empty, you can either add new nodes manually or let Monerujo
-        scan the network for you. Or both. Read on&#8230;</p>
-        <p>The node list shows all currently known nodes. Additionally, the timestamp
-        of the latest block known to each node is shown under the node name. An icon
-        representing the node&apos;s response behaviour
-        (which indicates the level of connectivity to be expected)
-        is shown next to each node.</p>
-        <p>Any node in the list can be bookmarked for later use.
-        Nodes which are not bookmarked will be forgotten.<p>
-        <p>Monerujo will choose the optimal bookmarked node each time you use it.
-        It does this by checking the blockheight (how up-to-date
-        is the node?) as well as the response behaviour (how fast does the node respond to requests?).</p>
-        <p>The list is sorted by these characteristics, so the top node would be the one Monerujo
-        would choose right now. The bottom of the list would show very slow or unavailable nodes.</p>
-        <h2>Add a Node</h2>
-        <p>By touching the &quot;Add Node&quot; button at the bottom, you will be asked to
-        enter the node details in the following dialog.
-        The &quot;Address&quot; is the hostname or IP-address of the node - this is the only
-        mandatory entry.
-        Enter the &quot;Port&quot; if the node runs on a non-default port (e.g. 18089).
-        You can also optionally name the node, so you can identify it easier later on.
-        Some nodes require credentials to use them. Enter the provided username &amp;
-        password in the appropriate fields. Now you can &quot;Test&quot; these setting.
-        The &quot;Test Results&quot; will display the blockheight, response time and actual IP used.
-        The result may also be an error - usually because the hostname provided is
-        not reachable in a sensible amount of time or the credentials are incorrect.
-        Or the hostname/port combination does not point to an actual Monero Node!
-        Once the test passes (no error) - you&apos;re set to press &quot;OK&quot; to save &amp;
-        bookmark this node.</p>
-        <h2>Scan for Nodes</h2>
-        <p>Additionally, you can scan the network for nodes. Monerujo will start
-        scanning the network for Remote Nodes on port 18089. It begins by asking your
-        bookmarked nodes for other peers in the Monero P2P network and then continues
-        by asking those for their peers, and so on. If you have no bookmarked nodes
-        (or they don&apos;t tell us about their peers),
-        Monerujo will go straight to the Monero seed nodes hardcoded into Monero. The
-        scan stops when it finds 10 remote nodes in total.</p>
+        <p>Atualize a lista de nós puxando para baixo &amp; favorite 3&#8211;5 nós para permitir que o Monerujo
+        escolha o melhor para você!</p>
+        <h2>O que é um Nó?</h2>
+        <p>O Monerujo usa um nó remoto (às vezes também chamado de Daemon) para se comunicar com
+        a Rede Monero sem ter que baixar e armazenar uma cópia do
+        blockchain inteiro.<p>
+        <h2>Lista de Nós</h2>
+        <p>Se a lista estiver vazia, você pode adicionar novos nós manualmente ou deixar que o Monerujo
+        escaneie a rede para você. Ou ambos. Leia mais&#8230;</p>
+        <p>A lista de nós mostra todos os nós conhecidos atualmente. Além disso, a data e hora
+        do último bloco sincronizado para cada nó é exibido abaixo de seu nome. Um ícone
+        representando o comportamento de resposta do nó
+        (o que indica o nível de conectividade esperado)
+        é exibido ao lado.</p>
+        <p>Qualquer nó na lista pode ser favoritado para uso posterior.
+        Os nós que não são marcados como favoritos serão esquecidos.<p>
+        <p>O Monerujo sempre escolherá o nó ideal dentre os marcados.
+        Ele faz isso verificando a altura do bloco (quão sincronizado
+        está o nó?) bem como o comportamento da resposta (com que rapidez o nó responde às solicitações?).</p>
+        <p>A lista é classificada por essas características, portanto, o nó do topo seria o único que o Monerujo
+        escolheria nesse caso. A parte inferior da lista mostraria nós muito lentos ou indisponíveis.</p>
+        <h2>Adicionar um Nó</h2>
+        <p>Ao tocar no botão &quot;Adicionar nó&quot; na parte inferior, você será solicitado a
+        inserir os detalhes do nó no diálogo seguinte.
+        O &quot;Endereço do Host&quot; é o nome do host ou endereço IP do nó - esta é a única
+        informação obrigatória.
+        Digite a &quot;Porta&quot; se o nó for executado em uma porta não padrão (por exemplo, 18089).
+        Você também pode, opcionalmente, dar um nome ao nó para facilitar sua identificação mais tarde.
+        Alguns nós exigem credenciais para serem utilizados. Digite o nome de usuário e
+        senha nos campos apropriados. Agora você pode &quot;testar&quot; essas configurações.
+        Os &quot;Resultados dos Testes&quot; exibirão a altura do bloco, o tempo de resposta e o IP real usado.
+        O resultado também pode ser um erro - geralmente porque o nome do host fornecido
+        não pôde ser alcançado em um período de tempo razoável ou as credenciais estão incorretas.
+        Ou a combinação Nome do Host/Porta não aponta para um Nó Monero válido!
+        Depois que o teste passar (sem erro), você poderá pressionar &quot;OK&quot; para salvar &amp;
+        marcar este nó como favorito.</p>
+        <h2>Escanear Nós</h2>
+        <p>Além disso, você pode verificar a rede em busca de nós. O Monerujo vai começar a
+        escanear a rede por nós remotos na porta 18089. Ele começa perguntando ao seus
+        nós marcados como favoritos por outros pares na rede P2P do Monero e, em seguida, continua
+        perguntando por seus pares, e assim por diante. Se você não tem nós marcados como favoritos
+        (ou eles não nos dizem sobre seus pares),
+        o Monerujo irá direto para os nós codificados direto no Monero em si. O
+        escaneamento termina quando 10 nós remotos são encontrados no total.</p>
     ]]></string>
 </resources>
