Update for Russian language (fixed small typos)

--- a/app/src/main/res/values-ru/help.xml
+++ b/app/src/main/res/values-ru/help.xml
@@ -168,7 +168,7 @@
         <h2>Заказ XMR.TO<h2>
         <p>На экране \"Подтверждение\" можно увидеть фактический заказ XMR.TO. Этот заказ
 	действителен в течение ограниченного времени. Обратный отсчёт можно увидеть на кнопке
-	траты \"Трата\". Курс обмена может отличаться от того, что был показан на предыдущих экранах..</p>
+	траты \"Трата\". Курс обмена может отличаться от того, что был показан на предыдущих экранах.</p>
         <h2>Секретный ключ XMR.TO<h2>
         <p>Так как Monerujo отвечает за ту часть транзакции, которая связана с Monero, для отслеживания
 	вашего заказа, которая связана с Bitcoin, можно использовать секретный ключ на домашней странице
@@ -197,7 +197,7 @@
         <h2>Заказ XMR.TO<h2>
         <p>На экране \"Подтверждение\" можно увидеть фактический заказ XMR.TO. Этот заказ
         действителен в течение ограниченного времени. Обратный отсчёт можно увидеть на кнопке \"Трата\".
-        Курс обмена может отличаться от того, что был показан на предыдущих экранах..</p>
+        Курс обмена может отличаться от того, что был показан на предыдущих экранах.</p>
         <h2>Секретный ключ XMR.TO<h2>
         <p>Так как Monerujo отвечает за ту часть транзакции, которая связана с Monero, для отслеживания
   	вашего заказа, которая связана с Bitcoin, можно использовать секретный ключ на домашней странице
