Removed apos from translation

--- a/app/src/main/res/values-ua/about.xml
+++ b/app/src/main/res/values-ua/about.xml
@@ -29,7 +29,7 @@
         з метою обробки транзакцій і їх передачі в мережу Monero в зашифрованій формі.
         </p>
         <p>Додаток не збирає будь-яких інших особистих даних.</p>
-        <p>Якщо ви використовуєте функцію обміну (необов&apos;язково), monerujo отримує обмінний
+        <p>Якщо ви використовуєте функцію обміну (необовязково), monerujo отримує обмінний
         курс через публічний API coinmarketcap.com.
         Перейдіть за адресою https://coinmarketcap.com/privacy для отримання детальної
         інформації про те, як збираються ваші персональні дані в запитах.</p>
