--- a/app/src/main/res/values-ua/help.xml
+++ b/app/src/main/res/values-ua/help.xml
@@ -3,7 +3,7 @@
     <string name="help_create_new"><![CDATA[
         <h1>Створити гаманець - Новий</h1>
         <p>Якщо вам потрібна нова адреса Monero!</p>
-        <p>Введіть унікальне ім&apos;я та пароль гаманця.
+        <p>Введіть унікальне імя та пароль гаманця.
          Пароль використовується для захисту даних вашого гаманця на Android пристрої.
 Необхідно використовувати надійний пароль. Краще навіть використовувати фразу-пароль.</p>
         <h2>Запишіть вашу мнемонічну фразу!</h2>
@@ -23,7 +23,7 @@
     <string name="help_create_seed"><![CDATA[
         <h1>Створити гаманець - Фраза</h1>
         <p>Що робити, якщо у вас вже є адреса Monero, і ви хочете відновити транзакції з блокчейну.</p>
-        <p>Необхідно ввести унікальні ім&apos;я і пароль гаманця. Пароль використовується для захисту даних вашого
+        <p>Необхідно ввести унікальні імя і пароль гаманця. Пароль використовується для захисту даних вашого
 гаманця на пристрої. Необхідно використовувати надійний пароль. Краще навіть використовувати фразу-пароль.</p>
         <p>Ввести фразу в поле \"Мнемонічна фраза\".<p>
         <p>Якщо вам відомий номер блоку першої транзакції, який використовувався з цією адресою, слід
@@ -34,7 +34,7 @@
     <string name="help_create_keys"><![CDATA[
         <h1>Створити гаманець - Ключі</h1>
         <p>Якщо ви хочете відновити свій гаманець за допомогою ключів!</p>
-        <p>Необхідно ввести унікальні ім&apos;я і пароль гаманця. Пароль використовується для захисту даних вашого
+        <p>Необхідно ввести унікальні імя і пароль гаманця. Пароль використовується для захисту даних вашого
 гаманця на пристрої. Необхідно використовувати надійний пароль. Краще навіть використовувати фразу-пароль.<p>
         <p>Введіть вашу Monero адресу в поле \"Публічна адреса\", заповніть поле \"Ключ перегляду \" і \"Ключ витрати \".</p>
         <p>Якщо вам відомий номер блоку першої транзакції, який використовувався з цією адресою, слід
@@ -45,7 +45,7 @@
     <string name="help_create_view"><![CDATA[
         <h1>Створити гаманець - Перегляд</h1>
         <p>Якщо ви просто хочете переглядати вхідні транзакції в гаманець!</p>
-        <p>Необхідно ввести унікальні ім&apos;я і пароль гаманця. Пароль використовується для захисту даних вашого
+        <p>Необхідно ввести унікальні імя і пароль гаманця. Пароль використовується для захисту даних вашого
 гаманця на пристрої. Необхідно використовувати надійний пароль. Краще навіть використовувати фразу-пароль.<p>
         <p>Введіть вашу Monero адресу в поле \"Публічний адресу\", заповніть поле \"Ключ перегляду\".</p>
         <p>Якщо вам відомий номер блоку першої транзакції, який використовувався з цією адресою, слід
@@ -71,7 +71,7 @@
 чотири групи - вітаємо! Файли вашого гаманця захищені 256-бітним ключем, який генерується
 з використанням функцій безпеки вашого пристрою і додатку, на основі обраної вами
 фрази-пароля (при створенні або при зміні). Цей ключ зламати вкрай складно!<br/>
-        Даний елемент обов&apos;язковий для недавно створених гаманців.
+        Даний елемент обовязковий для недавно створених гаманців.
         <h3>Застарілий пароль</h3>
         Якщо ви бачите тут вашу фразу-пароль, це означає, що файли вашого гаманця захищені не так надійно,
 як при використанні CrAzYpass. Щоб виправити становище, необхідно просто вибрати в меню \"Змінити пароль\".
@@ -82,23 +82,23 @@
 або при появі у вас нового телефону), або ж вам захочеться використовувати файли вашого гаманця на
 іншому пристрої або ПК, ви зможете використовувати цей пароль відновлення, щоб знову отримати доступ до вашого гаманця.<br/>
 Для того щоб вибрати іншу фразу-пароль, необхідно вибрати \"Змінити пароль\" в меню.
-Слід пам&apos;ятати про те, що при цьому буде згенеровано новий пароль відновлення. Запишіть його!
+Слід памятати про те, що при цьому буде згенеровано новий пароль відновлення. Запишіть його!
         <h2>Ключ перегляду</h2>
         Ваш ключ перегляду може використовуватися для перегляду вхідних транзакцій у ваш гаманець без дозволу
 на витрату коштів, що знаходяться у ньому.
         <h2>Ключ витрати</h2>
-        Ваш ключ витрати дозволяє будь-кому витратити Monero, пов&apos;язані з вашим гаманцем, тому не слід повідомляти
+        Ваш ключ витрати дозволяє будь-кому витратити Monero, повязані з вашим гаманцем, тому не слід повідомляти
 кому-небудь цей ключ. Як і мнемонічну фразу, його слід тримати в безпечному місці.
     ]]></string>
 
     <string name="help_list"><![CDATA[
         <h1>Перелік термінів</h1>
         <h2>Віддалений вузол</h2>
-        <p>Для зв&apos;язку з мережею Monero без завантаження і збереження копії всього блокчейна, Monerujo використовує
+        <p>Для звязку з мережею Monero без завантаження і збереження копії всього блокчейна, Monerujo використовує
 віддалений вузол. Список популярних віддалених вузлів і інформацію про те як запустити власний
 віддалений вузол, можна знайти тут: https://moneroworld.com<p>
-        <p>Monerujo має деякі попередньо встановлені віддалені вузли. Також гаманець запам&apos;ятовує
-п&apos;ять останніх використаних вузлів.</p>
+        <p>Monerujo має деякі попередньо встановлені віддалені вузли. Також гаманець запамятовує
+пять останніх використаних вузлів.</p>
         <h2>Гаманці</h2>
         <p>Тут ви можете переглядати гаманці. Вони знаходяться в папці Monerujo на внутрішньому накопичувачі
 вашого пристрою. Щоб переглянути їх, можна використати файловий менеджер. Необхідно на
@@ -156,7 +156,7 @@
         <p>XMR.TO є стороннім сервісом, який допомагає здійснювати обмін Monero на Bitcoin.
 Ми використовуємо API служби XMR.TO для включення платежів із впровадженням Bitcoin в Monerujo.
 Будь ласка, Відвідайте https://xmr.to, і виріште, чи хочете ви використовувати цю можливість.
-Команда Monerujo НЕ пов&apos;язана з XMR.TO і не може допомогти вам в роботі з цією службою.</p>
+Команда Monerujo НЕ повязана з XMR.TO і не може допомогти вам в роботі з цією службою.</p>
         <h2>Курс обміну XMR.TO<h2>
         <p>На екрані \"Сума\" відображаються поточні параметри служби XMR.TO.
 Тут також відображається обмінний курс, верхня і нижня межа BTC. Необхідно відзначити,
@@ -172,7 +172,7 @@
         <p>Так як Monerujo відповідає за ту частину транзакції, яка пов'язана з Monero, для відстеження
 вашого замовлення, яка пов'язана з Bitcoin, можна використовувати секретний ключ на домашній сторінці
 XMR.TO.</p>
-        <p>Слід пам&apos;ятати про те, що такий секретний ключ дійсний тільки протягом 24 годин після
+        <p>Слід памятати про те, що такий секретний ключ дійсний тільки протягом 24 годин після
 початку транзакції!</p>
         <h2>Зворотній відлік XMR.TO</h2>
         <p>Як тільки зворотний відлік досягне нульової точки, вам знадобиться отримати від XMR.TO нову
@@ -198,10 +198,10 @@ XMR.TO.</p>
          дійсна протягом обмеженого часу. Зворотний відлік можна побачити на кнопці \"Витрата\".
          Курс обміну може відрізнятися від того, що був показаний на попередніх екранах.</p>
          <H2> Секретний ключ XMR.TO<h2>
-        <p>Так як Monerujo відповідає за ту частину транзакції, яка пов&apos;язана з Monero, для відстеження
-   вашої заявки, яка пов&apos;язана з Bitcoin, можна використовувати секретний ключ на домашній сторінці
+        <p>Так як Monerujo відповідає за ту частину транзакції, яка повязана з Monero, для відстеження
+   вашої заявки, яка повязана з Bitcoin, можна використовувати секретний ключ на домашній сторінці
    XMR.TO.</p>
-        <p>Слід пам&apos;ятати про те, що такий секретний ключ дійсний тільки протягом 24 годин після
+        <p>Слід памятати про те, що такий секретний ключ дійсний тільки протягом 24 годин після
          початку транзакції!</p>
         <h2>Зворотній відлік XMR.TO</h2>
         <p>Як тільки зворотний відлік досягне нульової точки, вам знадобиться отримати від XMR.TO нову
@@ -213,7 +213,7 @@ XMR.TO.</p>
         <p>Ви хочете відновити свій гаманець із Ledger Nano S.</p>
         <p>Ваші секретні ключі ніколи не покинуть пристрій Ledger. Вам необхідно
          пристрій кожен раз, коли ви хочете отримати доступ до свого гаманця.</p>
-        <p>Необхідно ввести унікальні ім&apos;я і пароль гаманця. Пароль використовується для захисту даних вашого
+        <p>Необхідно ввести унікальні імя і пароль гаманця. Пароль використовується для захисту даних вашого
          гаманця на пристрої. Необхідно використовувати надійний пароль. Краще навіть використовувати фразу-пароль.</p>
         <p>Якщо вам відомий номер блоку першої транзакції, який використовувався з цією адресою, слід
          ввести його в поле \"Відновити висоту\". Ви також можете використовувати дату в форматі YYYY-MM-DD.
@@ -230,7 +230,7 @@ XMR.TO.</p>
         <h2>Сканування</h2>
         Оскільки Monero орієнтована на підтримку анонімності, кожний раз, коли ви відкриваєте гаманець Monerujo,
         нам доводиться сканувати блокчейн, щоб подивитися, чи були відправлені на ваш гаманець
-нові Monero. Інформація зберігається тільки на вашому телефоні, прив&apos;язаному до вашого гаманця.
+нові Monero. Інформація зберігається тільки на вашому телефоні, привязаному до вашого гаманця.
 Іноді це може зайняти деякий час, якщо ви не синхронізувалися протягом довгого періоду.
         <h2>Баланс</h2>
         <p><b>Допоможіть! Баланс мого гаманця кудись зник або не підтверджений!</b><br/>
